* 2007-01-11 - sebastian.kauss@open-xchange.com

 - Bugfix #6960: Missing recurrence_id when deleting a 
   synchronized exception

 - Bugfix: #9734: add number_of_attachments and number_of_links to 
   json array (calendar, contacts, tasks)

 - Bugfix: #9742: Whole-day appointment series with two participants in
   different timezones not shown in dayview

* 2008-01-11 - thorben.betten@open-xchange.com

 - Bugfix #10691: Increased IMAP timeout settings for both initial socket
   connect and socket I/O
 - Bugfix #10739: Added connect timeout and timeout for blocking operations
   to socket when detecting IMAP server

* 2007-01-10 - sebastian.kauss@open-xchange.com

 - Bugfix #6455: WebDAV Interface: Unexpected SQL Error!

* 2008-01-10 - thorben.betten@open-xchange.com

 - Bugfix #10668: Decoding for newer mail-safe encoding as per RFC2231
 - Partial bugfix #10686: Overwriting JSESSIONID cookie if its ID refers to
   a non-existent or invalid HTTP session.

* 2008-01-09 - thorben.betten@open-xchange.com

 - Bugfix #10214: Using "Java port of Mozilla charset detector" to guess
   proper charset for uploaded files

* 2008-01-09 - francisco.laguna@open-xchange.com

 - Bug #10706: Don't lose the filename in an update to an infoitem via webdav.

* 2008-01-09 - marcus.klein@open-xchange.com

 - Bugfix #10688: Schema should be unlocked if a SQLException occurs during
   locking.

* 2008-01-08 - francisco.laguna@open-xchange.com

 - Fix Exception handling in AjaxServlet#service. Wrap everything except ServletException in
   a ServletException (many thanks to Thorben).
 - Fixes for bugs #9109, #10051, #10044, #10052

* 2008-01-07 - francisco.laguna@open-xchange.com

 - Bugfix #9064: [Update] Added update task to fix folder name collisions below any parent folder.
 - Bugfix #10403: Log exceptions based on the exceptions category.
 - Bugfix #9695: [Update] Allow longer URLs in Infostore.

* 2008-01-03 - francisco.laguna@open-xchange.com
